--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -10,6 +10,14 @@
         android:id="@+id/youtubePlayerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <ImageView
+        android:id="@+id/img_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_alignParentEnd="true"
+        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        app:tint="@color/black"/>
 
    <!-- <com.hustunique.parsingplayer.player.view.ParsingVideoView
         android:layout_width="match_parent"
